assets path fixed

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         </div>
       </nav>
       <div class="topbar">
-        <a href="#"><img src="./assets/images/search.png" alt="поиск" /></a>
-        <a href="#"><img src="./assets/images/heart.png" alt="избраное" /></a>
-        <a href="#"><img src="./assets/images/cart.png" alt="корзина" /></a>
+        <a href="#"><img src="./assets/search.png" alt="поиск" /></a>
+        <a href="#"><img src="./assets/heart.png" alt="избраное" /></a>
+        <a href="#"><img src="./assets/cart.png" alt="корзина" /></a>
       </div>
     </header>
     <section class="hero">
